objects/MDF_Request__c.object
<CustomObject>
    <description>This is used for partner portal to build a MDF request and display back to the users in the portal</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>MDF_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accounting_PoC_Email__c</fullName>
        <label>Accounting PoC: Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Accounting_PoC_Name__c</fullName>
        <label>Accounting PoC: Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Activity_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activity Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <inlineHelpText>Use: xx/xx/xxxx date format or the date picker</inlineHelpText>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Partner_Cost__c</fullName>
        <label>Actual Partner Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Program_Cost__c</fullName>
        <label>Actual Program Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Vendor_Cost_1__c</fullName>
        <label>Additional Vendor Cost 1</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Vendor_Cost_2__c</fullName>
        <label>Additional Vendor Cost 2</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Addl_Vendor_1__c</fullName>
        <label>Vendor 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addl_Vendor_2__c</fullName>
        <label>Vendor 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addl_Vendor_3__c</fullName>
        <label>Vendor 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status_Hidden__c</fullName>
        <inlineHelpText>Field for MDF Approval Process</inlineHelpText>
        <label>Approval Status (Hidden)</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approval 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unsubmitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MDF_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>MDF_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Co_Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Address__c</fullName>
        <formula>Owner:User.Street  &amp; &quot;, &quot; &amp; Owner:User.City &amp; &quot;, &quot; &amp;  Owner:User.State &amp; &quot;, &quot; &amp;   Owner:User.PostalCode &amp; &quot;, &quot; &amp; Owner:User.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Billing_Address__c</fullName>
        <description>Partner Account billing address</description>
        <formula>Owner:User.Contact.Account.BillingStreet &amp; &quot;, &quot; &amp;  Owner:User.Contact.Account.BillingCity &amp; &quot;, &quot; &amp; 
Owner:User.Contact.Account.BillingState &amp; &quot;, &quot; &amp; 
Owner:User.Contact.Account.BillingPostalCode &amp; &quot;, &quot; &amp; 
Owner:User.Contact.Account.BillingCountry</formula>
        <label>Company Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_Value_of_Expected_Opportunities__c</fullName>
        <inlineHelpText>Estimated Value of Expected Opportunities</inlineHelpText>
        <label>Est Value of Expected Opportunities</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Other_Vendor_s_Amount__c</fullName>
        <label>Estimated Other Vendor(s) Amount:</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Partner_Amount__c</fullName>
        <label>Estimated Partner Amount</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Pipeline_Value__c</fullName>
        <label>Estimated Pipeline Value</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Silver_Peak_Amount__c</fullName>
        <label>Estimated Silver Peak Amount</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Campaign_Name__c</fullName>
        <label>Event/Campaign Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Location_City__c</fullName>
        <label>Event Location (City)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Location_Country__c</fullName>
        <label>Event Location (Country)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Location_State__c</fullName>
        <label>Event Location (State)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Location_Zip__c</fullName>
        <label>Event Location (Zip)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Granted_Reason__c</fullName>
        <label>Exception Granted Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Audience_Size__c</fullName>
        <label>Expected Audience Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Number_of_Leads__c</fullName>
        <label>Expected Number of Leads</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fast_Start_Marketing_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Fast Start Marketing Program?</inlineHelpText>
        <label>Fast Start Marketing Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GEO__c</fullName>
        <label>GEO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEO_of_Owner_Acct__c</fullName>
        <formula>IF(
INCLUDES(Owner:User.Contact.Account.GEO_Supported__c, &quot;EMEA&quot;), 
&quot;EMEA&quot;,
IF( 
INCLUDES(Owner:User.Contact.Account.GEO_Supported__c, &quot;APAC&quot;), 
&quot;APAC&quot;, &quot;NAM&quot;)




)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GEO of Owner Acct</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Vertical_Being_Targeted__c</fullName>
        <inlineHelpText>Industry/Vertical Being Targeted</inlineHelpText>
        <label>Industry/Vertical Being Targeted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_No__c</fullName>
        <label>Invoice No.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Portal_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Portal Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_of_Event__c</fullName>
        <inlineHelpText>Location of Event(City or Geography Targeted):</inlineHelpText>
        <label>Location of Event</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDF_Status__c</fullName>
        <label>MDF Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Activity_PoC_Email__c</fullName>
        <label>Marketing Activity PoC: Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Marketing_Activity_Point_of_Contact_Nam__c</fullName>
        <inlineHelpText>Point of Contact for Marketing</inlineHelpText>
        <label>Marketing Activity PoC: Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_No__c</fullName>
        <label>PO No.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Received__c</fullName>
        <label>PO Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <formula>Submitter__r.Account.Name</formula>
        <label>Partner Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Instructions__c</fullName>
        <formula>&quot;Required Documentation for MDF Processing &amp; Payment:&quot; &amp; BR() &amp; 
BR() &amp; 
&quot;Upon completion of event, please upload the 3 required documents listed below in order to approve payment.&quot; &amp; BR() &amp; 
&quot; 1. Invoice(billed to Silver Peak)&quot; &amp; BR() &amp; 
&quot; 2. Proof of Performance(photos, print, third party receipts proving cost of the event so you will be invoiced for the correct amount, email invites, collateral, etc&quot; &amp; BR() &amp; 
&quot; 3. Attendance Lists–leads must be identified &amp; have contact information (contact info includes: first &amp; last name, company, title, email, phone number, country, state, postal code)&quot; &amp; BR() &amp; 
BR() &amp; 
&quot;To upload your documents, please follow the steps below:&quot; &amp; BR() &amp; 
&quot;• Scroll down to the Notes &amp; Attachments section on this page.&quot; &amp; BR() &amp; 
&quot;• Click &apos;Attach File&apos;.&quot; &amp; BR() &amp; 
&quot;• Select the file you are uploading by clicking on &apos;Browse&apos; and than click &apos;Open&apos;.&quot; &amp; BR() &amp; 
&quot;• Click on &apos;Attach File&apos;.&quot; &amp; BR() &amp; 
&quot;• Repeat steps 1 &amp; 2 until all required documents have been uploaded.&quot; &amp; BR() &amp; 
&quot;• Click on &apos;Done&apos; when you’ve uploaded all your documents. This will automatically send your documents. &quot; &amp; BR() &amp; 
&quot;• No additional steps required.&quot; &amp; BR() &amp; 
&quot;• To manage your documents, scroll back down to the Notes &amp; Attachments section and select action: Edit, View or Del. &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_at_Platinum_Level__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Partner at Platinum Level?</inlineHelpText>
        <label>Partner at Platinum Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Phone__c</fullName>
        <label>Preferred Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Purchasing_Request_Line_Added__c</fullName>
        <formula>Purchasing_Request__r.Purchasing_Request_Lines__c</formula>
        <inlineHelpText>Number of Purchasing Request Lines on this MDF Request. Should be at least &apos;1&apos; to progress through the approval process. (Purchasing Req Line contains Gl Code, Dept/Proj Number)</inlineHelpText>
        <label>Purchasing Request Line Added</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchasing_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchasing Request</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Purchasing_Request__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>MDF Request</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Purchasing_Request__c</referenceTo>
        <relationshipName>MDF_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quarterly_Marketing_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Included In Joint Quarterly Marketing Plan?</inlineHelpText>
        <label>Quarterly Marketing Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MDF_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_Rejected__c</fullName>
        <label>Reason Denied</label>
        <picklist>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date/Venue/Topic to Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate MDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Generally Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_field__c</fullName>
        <inlineHelpText>used for the MDF reference to previous portal</inlineHelpText>
        <label>Reference Id</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remit_Address_1__c</fullName>
        <label>Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remit_Address_2__c</fullName>
        <label>Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remit_City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remit_Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remit_State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remit_Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remit_to_Address__c</fullName>
        <formula>Remit_Address_1__c  &amp; &quot;,&quot; &amp; Remit_Address_2__c  &amp; &quot;,&quot; &amp; Remit_City__c &amp; &quot;,&quot; &amp; Remit_State__c  &amp; &quot;,&quot; &amp; Remit_Zip_Postal_Code__c  &amp;  &quot;,&quot; &amp; Remit_Country__c</formula>
        <inlineHelpText>Only included if different than Company address.</inlineHelpText>
        <label>Remit to Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Reimbursement_Amount__c</fullName>
        <label>Requested Reimbursement Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Result_Detail__c</fullName>
        <label>Result Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Submitted_For__c</fullName>
        <label>Submitted For</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Submitted_to_AP__c</fullName>
        <label>Submitted to AP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>used to pull the submitters information onto the request form</description>
        <label>Submitter</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>MDF_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Audience_Profile__c</fullName>
        <label>Target Audience Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Attendees__c</fullName>
        <label>Total Attendees</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Program_Costs__c</fullName>
        <label>Total Estimated Program Costs</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Leads_Generated__c</fullName>
        <label>Total Leads Generated</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Qualified_Leads__c</fullName>
        <label>Total Qualified Leads</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Program__c</fullName>
        <label>Type of Program</label>
        <picklist>
            <picklistValues>
                <fullName>Advertisement - 1/2 page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertisement - 1/4 page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertisement - Full page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast (Television/Radio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collateral/Literature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eNewletters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floor Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunch and Learn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Incentives/Promotional Contest/Giveaways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Industry Shows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>post_event_follow_up_plan__c</fullName>
        <inlineHelpText>What is your post event follow up plan?</inlineHelpText>
        <label>What is your post event follow up plan?</label>
        <type>TextArea</type>
    </fields>
    <label>Funding Requests</label>
    <listViews>
        <fullName>APAC_MDF_Requests</fullName>
        <columns>NAME</columns>
        <columns>Type_of_Program__c</columns>
        <columns>Event_Campaign_Name__c</columns>
        <columns>Partner_Account__c</columns>
        <columns>Activity_Date__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GEO__c</field>
            <operation>equals</operation>
            <value>APAC</value>
        </filters>
        <label>APAC Funding Requests</label>
        <sharedTo>
            <group>Marketing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_EMEA_MDF_Requests</fullName>
        <columns>NAME</columns>
        <columns>Reference_field__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Accounting_PoC_Email__c</columns>
        <columns>Accounting_PoC_Name__c</columns>
        <columns>Activity_Complete__c</columns>
        <columns>Activity_Date__c</columns>
        <columns>Actual_Partner_Cost__c</columns>
        <columns>Actual_Program_Cost__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>GEO__c</columns>
        <columns>Requested_Reimbursement_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GEO__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <label>All EMEA Funding Requests</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_MDF_Requests_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Reference_field__c</columns>
        <columns>Partner_Account__c</columns>
        <columns>GEO__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Location_of_Event__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Submitter__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Accounting_PoC_Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Approved,Denied,Declined,Cancelled</value>
        </filters>
        <label>All Funding Requests In Progress</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Approved_MDF_Requests</fullName>
        <columns>NAME</columns>
        <columns>Reference_field__c</columns>
        <columns>Type_of_Program__c</columns>
        <columns>Event_Campaign_Name__c</columns>
        <columns>Activity_Date__c</columns>
        <columns>Activity_Complete__c</columns>
        <columns>Purchasing_Request__c</columns>
        <columns>Partner_Account__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>GEO__c</columns>
        <columns>PO_No__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved Funding Requests</label>
        <sharedTo>
            <group>EastSalesTeam</group>
            <group>Marketing</group>
            <group>NWSalesTeam</group>
            <group>Quota_Carrying_Sales</group>
            <group>SalesMgmt</group>
            <group>SalesTeam</group>
            <group>WestSalesTeam</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Approved_MDF_Requests_Partners</fullName>
        <columns>NAME</columns>
        <columns>Reference_field__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Type_of_Program__c</columns>
        <columns>Event_Campaign_Name__c</columns>
        <columns>Activity_Date__c</columns>
        <columns>Activity_Complete__c</columns>
        <columns>Purchasing_Request__c</columns>
        <columns>Partner_Account__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>GEO__c</columns>
        <columns>PO_No__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>3) Approved Funding Requests</label>
    </listViews>
    <listViews>
        <fullName>Denied_MDF_Requests_Partner</fullName>
        <columns>NAME</columns>
        <columns>Approval_Status__c</columns>
        <columns>Partner_Account__c</columns>
        <columns>Type_of_Program__c</columns>
        <columns>Event_Campaign_Name__c</columns>
        <columns>Activity_Date__c</columns>
        <columns>Activity_Complete__c</columns>
        <columns>GEO__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Denied</value>
        </filters>
        <filters>
            <field>Approval_Status_Hidden__c</field>
            <operation>equals</operation>
            <value>Denied</value>
        </filters>
        <filters>
            <field>Reason_Rejected__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>4) Denied Funding Requests</label>
    </listViews>
    <listViews>
        <fullName>Denied_MDF_Requests_Partner_Alerted</fullName>
        <columns>NAME</columns>
        <columns>Partner_Account__c</columns>
        <columns>Type_of_Program__c</columns>
        <columns>Event_Campaign_Name__c</columns>
        <columns>Activity_Date__c</columns>
        <columns>Activity_Complete__c</columns>
        <columns>GEO__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Denied</value>
        </filters>
        <filters>
            <field>Approval_Status_Hidden__c</field>
            <operation>equals</operation>
            <value>Denied</value>
        </filters>
        <filters>
            <field>Reason_Rejected__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Denied Funding Requests(Partner Alerted)</label>
        <sharedTo>
            <group>EastSalesTeam</group>
            <group>Marketing</group>
            <group>NWSalesTeam</group>
            <group>Quota_Carrying_Sales</group>
            <group>SalesMgmt</group>
            <group>SalesTeam</group>
            <group>WestSalesTeam</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_MDF_Requests</fullName>
        <columns>Event_Campaign_Name__c</columns>
        <columns>NAME</columns>
        <columns>Activity_Date__c</columns>
        <columns>Approval_Date__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Submitter__c</columns>
        <columns>Target_Audience_Profile__c</columns>
        <columns>Requested_Reimbursement_Amount__c</columns>
        <columns>Industry_Vertical_Being_Targeted__c</columns>
        <columns>Location_of_Event__c</columns>
        <columns>Estimated_Partner_Amount__c</columns>
        <columns>Estimated_Silver_Peak_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GEO__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <label>EMEA Funding Requests</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LAT_MDF_Requests</fullName>
        <columns>NAME</columns>
        <columns>Reference_field__c</columns>
        <columns>Event_Campaign_Name__c</columns>
        <columns>Type_of_Program__c</columns>
        <columns>Activity_Date__c</columns>
        <columns>Co_Country__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Purchasing_Request__c</columns>
        <columns>GEO__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GEO__c</field>
            <operation>equals</operation>
            <value>LAT</value>
        </filters>
        <label>LAT Funding Requests</label>
        <sharedTo>
            <group>Marketing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MDFs_Approved_Last_7_Days</fullName>
        <columns>Partner_Account__c</columns>
        <columns>NAME</columns>
        <columns>Reference_field__c</columns>
        <columns>Event_Campaign_Name__c</columns>
        <columns>Estimated_Silver_Peak_Amount__c</columns>
        <columns>PO_No__c</columns>
        <columns>Activity_Date__c</columns>
        <columns>GEO__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Approval_Date__c</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <label>Funding Requests Approved - Last 90 Days</label>
        <sharedTo>
            <group>Marketing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MDFs_Uploaded_Today</fullName>
        <columns>NAME</columns>
        <columns>Reference_field__c</columns>
        <columns>Type_of_Program__c</columns>
        <columns>Event_Campaign_Name__c</columns>
        <columns>Activity_Date__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Partner_Account__c</columns>
        <columns>Actual_Program_Cost__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Submitter__c</columns>
        <columns>Accounting_PoC_Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>12/24/2014 12:00 AM</value>
        </filters>
        <label>Funding Requests Uploaded Today</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>